--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = word_study
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.wordStudy
+PRODUCT_BUNDLE_IDENTIFIER = com.thirteenone.wordStudy
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.thirteenone. All rights reserved.
